[gd_scene load_steps=4 format=3 uid="uid://c0bngicr1p4w0"]

[ext_resource type="Theme" uid="uid://b2ufqqc6nun3o" path="res://pixel font/mid_font_theme.tres" id="1_2nmyf"]
[ext_resource type="Script" path="res://game_scenes/prompts_screen/starting_prompts.gd" id="1_jomlb"]
[ext_resource type="Theme" uid="uid://867x5f46yrxo" path="res://pixel font/small_font_theme.tres" id="3_mx321"]

[node name="Node2D2" type="Node2D"]
script = ExtResource("1_jomlb")

[node name="Label" type="Label" parent="."]
offset_left = 281.0
offset_top = 130.0
offset_right = 881.0
offset_bottom = 189.0
theme = ExtResource("1_2nmyf")
text = "Upload Files to Continue"
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="."]
offset_left = 364.0
offset_top = 208.0
offset_right = 764.0
offset_bottom = 248.0
theme = ExtResource("1_2nmyf")

[node name="Button" type="Button" parent="."]
offset_left = 463.0
offset_top = 289.0
offset_right = 681.0
offset_bottom = 339.0
theme = ExtResource("3_mx321")
text = "Upload OPFOR Profile"

[node name="Button2" type="Button" parent="."]
offset_left = 464.0
offset_top = 354.0
offset_right = 666.0
offset_bottom = 403.0
theme = ExtResource("3_mx321")
text = "Upload Defend Profile"

[node name="Button4" type="Button" parent="."]
offset_left = 463.0
offset_top = 415.0
offset_right = 681.0
offset_bottom = 464.0
theme = ExtResource("3_mx321")
text = "Upload Timeline"

[node name="FileDialog" type="FileDialog" parent="."]
mode = 2
title = "Open a File"
size = Vector2i(600, 400)
ok_button_text = "Open"
file_mode = 0
access = 2

[node name="FileDialog2" type="FileDialog" parent="."]
mode = 2
title = "Open a File"
size = Vector2i(600, 400)
ok_button_text = "Open"
file_mode = 0
access = 2

[node name="FileDialog3" type="FileDialog" parent="."]
mode = 2
title = "Open a File"
size = Vector2i(600, 400)
ok_button_text = "Open"
file_mode = 0
access = 2

[node name="Button3" type="Button" parent="."]
offset_left = 420.0
offset_top = 491.0
offset_right = 713.0
offset_bottom = 566.0
theme = ExtResource("1_2nmyf")
text = "CONTINUE"

[node name="attackfilelabel" type="Label" parent="."]
offset_left = 700.0
offset_top = 289.0
offset_right = 904.0
offset_bottom = 339.0
theme = ExtResource("3_mx321")
vertical_alignment = 1

[node name="defendfilelabel" type="Label" parent="."]
offset_left = 700.0
offset_top = 353.0
offset_right = 903.0
offset_bottom = 403.0
theme = ExtResource("3_mx321")
vertical_alignment = 1

[node name="timelinefilelabel" type="Label" parent="."]
offset_left = 700.0
offset_top = 415.0
offset_right = 903.0
offset_bottom = 465.0
theme = ExtResource("3_mx321")
vertical_alignment = 1

[node name="Button5" type="Button" parent="."]
z_index = 1
offset_left = 251.0
offset_top = 491.0
offset_right = 401.0
offset_bottom = 567.0
theme = ExtResource("1_2nmyf")
button_mask = 3
text = "BACK"

[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_button_5_pressed"]
